--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,12 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form action="/login" method="post">
+      <label>Username:</label>
+      <input type="text" name="username" value="">
+      <label>Username:</label>
+      <input type="text" name="username" value="">
+      <input type="Submit" name="Submit" value="Submit">
+    </form>
   </body>
 </html>
